<resources>
    <string name="app_name">Ishwari Vegetables Partner</string>
    <string name="app_version">Version 3.0</string>
    <string name="open_nav">navigation_view_opened</string>
    <string name="close_nav">navigation_view_closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">Update Profile</string>
    <string name="generating_pdf">Generating PDF</string>
    <string name="please_wait">Please Wait</string>
    <string name="pdf_generated_do_you_want_to_open">PDF Generated Do you want to open</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cart">Cart</string>
    <string name="no_vegetables_found">No Vegetables Found</string>
    <string name="ordering_to">Ordering to</string>
    <string name="place_order">Place Order</string>
    <string name="search_vegetables">Search Vegetables</string>
    <string name="order_history">Order History</string>
    <string name="order_date">Order Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="my_profile">My Profile</string>
    <string name="account">Account</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="order_no">Order No.</string>
    <string name="order_status">order status</string>
    <string name="items">Items</string>
    <string name="order_placed_to">Order Placed to Ishwari Vegetables</string>
    <string name="payment_status">Payment Status</string>
    <string name="paid">Paid</string>
    <string name="unpaid">UnPaid</string>
    <string name="order_placed_on">Order Placed On</string>
    <string name="price_not_set">Price Not Set</string>
    <string name="total_amount_rs">Total Amount Rs.</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="view_details">View Details</string>
    <string name="add">Add</string>
    <string name="added">Added !</string>
    <string name="qty">Qty</string>
    <string name="app_name_print" translatable="false">"           Ishwari Vegetable Suppliers     \n "</string>
    <string name="shop_addr_print" translatable="false">"   Shop No. 64, Laxmi Market, Kalyan (West).\n"</string>
    <string name="mob_no_print" translatable="false">"             9594227900 , 7977844401\n"</string>
    <string name="app_name_pdf" translatable="false">ISHWARI VEGETABLE SUPPLIERS</string>
    <string name="app_name_export" translatable="false">IshwariVegetables</string>
    <string name="shop_addr_pdf" translatable="false">Shop No. 64, Laxmi Market, Kalyan(W)</string>
    <string name="mob_no_pdf" translatable="false">9594227900 , 7977844401</string>
    <string name="document_generated_from" translatable="false">Document generated through Ishwari Vegetable Suppliers Mobile APP</string>

</resources>