<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserCartFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lvBottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/capriola"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrderDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_box_new_profile_my"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:gravity="center"
                    android:hint="@string/order_date"
                    android:drawableTint="@color/colorAccent"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSearch"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtSearch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85"
                        android:backgroundTint="@color/white"
                        android:hint="@string/search_vegetables"
                        android:inputType="textPersonName"
                        android:paddingLeft="16dp"
                        android:singleLine="true"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:padding="13dp"
                        android:src="@drawable/search_blue" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvVegetables"
                    android:layout_width="match_parent"
                    android:visibility="visible"
                    android:layout_height="match_parent" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/lvNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_vegetables_found"
            android:textSize="14dp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lvBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/bg_cart"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.55"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center_vertical"
                    android:text="@string/ordering_to"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPlaceOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.45"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/place_order"
                android:textColor="@color/colorAccent"
                android:textSize="12dp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>