<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/AppTheme1"
    tools:context=".user.UserDashboardActivity"
    tools:ignore="HardcodedText">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/capriola"
                    android:text="@string/my_profile"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:textStyle="bold" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/empty_profile"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="1dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="35dp"
                    app:cardElevation="4dp"
                    android:layout_below="@+id/imgProfile"
                    app:cardCornerRadius="12dp"
                    android:layout_marginTop="-25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="31dp"
                    app:cardBackgroundColor="@color/purple"
                    android:layout_height="35dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_camera"
                        android:layout_gravity="center"
                        android:id="@+id/add_img"
                        app:tint="@color/white" />

                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/capriola"
                        android:text="@string/account"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.15"
                            android:src="@drawable/name" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="0.85"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:hint="@string/name">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtName"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.15"
                            android:src="@drawable/email" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="0.85"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:hint="@string/email">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.15"
                            android:src="@drawable/phone" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="0.85"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:hint="@string/phone">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.15"
                            android:src="@drawable/password1" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="0.85"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:hint="@string/password">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.15"
                            android:src="@drawable/address" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="0.85"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>


                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvUpdateProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:orientation="vertical"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:fontFamily="@font/capriola"
                                android:text="@string/update"
                                android:textColor="@color/white"
                                android:textSize="14dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/capriola"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>